src/test/deca/context/valid/created/call_field.deca
//Description :
// Test d'appel d'attribut
//
// Resultats :
// Erreur


class Premiere {
    int x = 2;
    protected float y = 3;
}

{
    Premiere prem = new Premiere();
    print(prem.x);
}
