src/test/deca/context/invalid/created/extends-method-field.deca
//Description :
// Test d'un appel d'attribut
//
// Resultats :
// Erreur

class A {
    int a;
    protected int b = 2;

}

class B extends A {
    
    void b() {
        print("bjr non");
    }
    
}

{
    A a = new B();
    a.b;
}
